samples/_failures_safe/1761442511_6237d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0cf9b003.c: In function ‘print_statistics’:
./samples/SAFE/__tmp_0cf9b003.c:139:11: error: expected ‘;’ at end of input
  139 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_0cf9b003.c:139:5: error: expected declaration or statement at end of input
  139 |     printf
      |     ^~~~~~
